// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render component with 1 expenses 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`Should render component with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $8,765,433.42
  </h1>
</div>
`;
